<resources>
    <string name="app_name">Android_Project_MOB204</string>
    <string name="welcome">Welcome to</string>
    <string name="nameStore">PHUONG NAM BOOK STORE</string>
    <string name="forgot"><u>Forgot your password?</u></string>
    <string name="or">or</string>
    <string name="linkedin"><u>Login with Linkedin</u></string>
    <string name="facebook"><u>Login with Facebook</u></string>
    <string name="dangky"><u>Do not have an account?</u></string>
    <string name="title"><u>Title</u></string>
    <string name="view"><u><b>View</b></u></string>
    <string name="more"><u>More</u></string>
    <string name="content">Born là một bí ẩn trong văn học mạng, người ta chỉ biết đến cô qua khối lượng tác phẩm khá lớn đã được in thành sách.</string>
    <string name="delete"><u><b>Delete</b></u></string>
    <string name="notify_empty_username">Please do not empty username!</string>
    <string name="title_activity_drawable_layout">DrawableLayout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="notify_empty_password">Please do not empty password!</string>
    <string name="notify_error_password">Password must contain 6-15 characters!</string>
    <string name="book">Book</string>
    <string name="hintBookId">Book ID</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="show">Show</string>
    <string name="title1">Title1</string>
    <string name="titleLibrary">TitleLibrary</string>
    <string name="subTitleLibrary">Sub Title</string>
    <string name="detail"><u><b>Detail</b></u></string>
    <string name="date">Date</string>
    <string name="invoiceID">Invoice ID</string>
    <string name="invoiceDate">Date</string>
    <string name="btDateSelect">Select</string>
    <string name="btAdd">Add</string>
    <string name="today">Today: </string>
    <string name="month">This Month:</string>
    <string name="year">This Year:</string>
    <string name="bookID">Book ID</string>
    <string name="count">Count</string>
    <string name="pay">Pay</string>
    <string name="vuongquocthanh">Vuong Quoc Thanh</string>
    <string name="changepassword">Change Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="retype">Confirm Password</string>
    <string name="register">Registration</string>
    <string name="username">Usename</string>
    <string name="yourname">Your Name</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="btRegister">Registration</string>
    <string name="findInvoice">Find Invoice</string>
    <string name="find">Find</string>
    <string name="findTrending">Find Trending</string>
    <string name="notify_wrong_username_password">Wrong Username or Password</string>
    <string name="findUser">Enter Name</string>
    <string name="findUsername">Find</string>
    <string name="titleDialog">Delete User</string>
    <string name="question">Do you want delete?</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="notify_empty_name">Please do not empty name</string>
    <string name="notify_not_mathches_password">ConfirmPassword must be same Password!</string>
    <string name="notify_empty_phone">Please do not empty Phone Nmber</string>
    <string name="edit">User Information</string>
    <string name="btEditUser">Save</string>
    <string name="notify_error_oldpassword">Old Password does not matches!!</string>
    <string name="notify_error_confirmpassword">Confirm password doesn\'t macth!</string>
    <string name="showPassword">Show Password</string>
    <string name="notify_min_length_phone">Phone Number must be between 9-11 characters!</string>
    <string name="notify_already_exist">Username already exist!</string>
    <string name="notify_already_exists">Username already exists!</string>
    <string name="notify_no_record_found">No Records Found!</string>
    <string name="addCategory">Add Category</string>
    <string name="notify_empty_category_id">Category ID must not be empty!</string>
    <string name="notify_empty_category_name">Category Name must not be empty!</string>
    <string name="notify_empty_category_position">Category Position must not be empty!</string>
    <string name="notify_empty_category_description">Category Description must not be empty!</string>
    <string name="notify_error_category_id">Category already exits!</string>
    <string name="notify_error_category_id_length">Category ID must not exceed 5 characters</string>
</resources>
