<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChangePasswordActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarChangePassword"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changepassword"
            style="@style/colorText"
            android:textSize="30sp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="16"
            app:passwordToggleEnabled="true"
            android:textColorHint="#dadad8"
            app:counterEnabled="true"
            android:padding="10dp"
            app:counterTextAppearance="@style/counterTextApprearance">
            <EditText
                android:id="@+id/edOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/oldPassword"
                android:inputType="textPassword"
                style="@style/colorText"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="16"
            app:passwordToggleEnabled="true"
            android:textColorHint="#dadad8"
            app:counterEnabled="true"
            android:padding="10dp"
            app:counterTextAppearance="@style/counterTextApprearance">
            <EditText
                android:id="@+id/edNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newPassword"
                android:inputType="textPassword"
                style="@style/colorText"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="16"
            app:passwordToggleEnabled="true"
            android:textColorHint="#dadad8"
            app:counterEnabled="true"
            android:padding="10dp"
            app:counterTextAppearance="@style/counterTextApprearance">
            <EditText
                android:id="@+id/edRetype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/retype"
                android:inputType="textPassword"
                style="@style/colorText"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_Button"
            android:text="@string/save"
            android:textColor="@color/colorAccent"
            android:layout_margin="10dp"/>
    </LinearLayout>




</LinearLayout>