<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarRegister"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"></android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/colorAccent"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegistrationUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="30"
                android:textColorHint="#dadad8"
                app:counterEnabled="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:counterTextAppearance="@style/counterTextApprearance">
                <EditText
                    android:id="@+id/edRegisterUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    style="@style/colorText"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegistrationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="50"
                android:textColorHint="#dadad8"
                app:counterEnabled="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:counterTextAppearance="@style/counterTextApprearance">
                <EditText
                    android:id="@+id/edRegisterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/yourname"
                    style="@style/colorText"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegistrationPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="16"
                android:textColorHint="#dadad8"
                app:counterEnabled="true"
                app:passwordToggleEnabled="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:counterTextAppearance="@style/counterTextApprearance">
                <EditText
                    android:id="@+id/edRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    style="@style/colorText"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegistrationConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="16"
                android:textColorHint="#dadad8"
                app:counterEnabled="true"
                app:passwordToggleEnabled="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:counterTextAppearance="@style/counterTextApprearance">
                <EditText
                    android:id="@+id/edRegisterConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmpassword"
                    style="@style/colorText"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegistrationPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="11"
                android:textColorHint="#dadad8"
                app:counterEnabled="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:counterTextAppearance="@style/counterTextApprearance">
                <EditText
                    android:id="@+id/edPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phoneNumber"
                    android:inputType="phone"
                    style="@style/colorText"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btRegister"
                android:background="@color/background_Button"
                android:textColor="@color/colorAccent"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>