<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddInvoiceActivity"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarAddInvoice"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_below="@+id/toolbarAddInvoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="50"
                android:textColorHint="#dadad8"
                app:counterEnabled="true"
                app:counterTextAppearance="@style/counterTextApprearance">
                <EditText
                    android:id="@+id/edInvoiceID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/invoiceID"
                    style="@style/colorText"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/edInvoiceDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:hint="@string/invoiceDate"
                        android:textColorHint="#dadad8"
                        android:textColor="@color/colorAccent"/>
                    <Button
                        android:id="@+id/btSelectInvoiceDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#009688"
                        android:text="@string/btDateSelect"
                        android:textColor="@color/colorAccent"
                        android:onClick="showDialogDate"/>
                </LinearLayout>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btInvoiceAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:layout_marginTop="16dp"
                android:text="@string/btAdd"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>