<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEditUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="30"
                android:textColorHint="#dadad8"
                app:counterEnabled="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:counterTextAppearance="@style/counterTextApprearance">
                <EditText
                    android:id="@+id/edRegisterUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    style="@style/colorText"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEditName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="50"
                android:textColorHint="#dadad8"
                app:counterEnabled="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:counterTextAppearance="@style/counterTextApprearance">
                <EditText
                    android:id="@+id/edRegisterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/yourname"
                    style="@style/colorText"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEditPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="11"
                android:textColorHint="#dadad8"
                app:counterEnabled="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:counterTextAppearance="@style/counterTextApprearance">
                <EditText
                    android:id="@+id/edPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phoneNumber"
                    android:inputType="phone"
                    android:maxLength="11"
                    style="@style/colorText"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

</LinearLayout>