<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center_horizontal">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/tvToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:textSize="25sp"
        android:text="@string/today"
        android:textColor="#009688"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/tvTodayValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_toRightOf="@+id/tvToday"
        android:textSize="25sp"
        android:text="0"
        android:textColor="#009688"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tvMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvToday"
        android:textSize="25sp"
        android:text="@string/month"
        android:textColor="#009688"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvMonthValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTodayValue"
        android:layout_toRightOf="@+id/tvMonth"
        android:textSize="25sp"
        android:text="0"
        android:textColor="#009688"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/tvYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMonth"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:text="@string/year"
        android:textColor="#009688"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvYearValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMonthValue"
        android:layout_toRightOf="@+id/tvYear"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:text="0"
        android:textColor="#009688"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"/>
</RelativeLayout>