<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fontFamily="@font/robotobold"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".activity.LoginActivity">

    <TextView
        style="@style/colorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to"
        android:textSize="35sp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="15dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="300"
        android:textColorHint="#dadad8"
        app:counterEnabled="true"
        app:counterTextAppearance="@style/counterTextApprearance">
        <EditText
            android:id="@+id/edUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Your phone number or email"
            style="@style/colorText"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#dadad8"
        app:counterMaxLength="16"
        app:counterEnabled="true"
        app:passwordToggleEnabled="true"
        app:counterTextAppearance="@style/counterTextApprearance">

        <EditText
            android:id="@+id/edPassword"
            style="@style/colorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/cbRemember"
        android:checked="true"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember?"
        style="@style/colorText"
        android:layout_gravity="left"/>
    <Button
        style="@style/colorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/background_Button"
        android:text="Login"
        android:onClick="showBottomNavigation"/>
     <ImageView
         android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ngang"/>
    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        style="@style/colorText"/>
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ngang"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="2dp"
            android:layout_height="wrap_content"
            android:text="@string/or"
            style="@style/colorText"
            android:gravity="center"/>
        <ImageView
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ngang"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="65dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/linked"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkedin"
            style="@style/colorText"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="65dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/fb"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:layout_gravity="center"
            style="@style/colorText"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:text="@string/dangky"
        style="@style/colorText"
        android:layout_marginBottom="10dp"
        android:onClick="showRegistration"/>

</LinearLayout>